js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib1/InterfaceA.3.kt
interface A {
    fun testA1() = 2

    fun testA2() = 3

    val testA3: Int
        get() = 1
}
